# bevy_talks

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  editor.html  getting-started.html  index.html  mise.toml  print.html  roadmap.html  schema.json  searcher-09f2665d.js  searchindex-7667e792.js  searchindex.js  searchindex.json  toc-f9d1afe1.js  toc.html
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: book.yml  ci.yml
_examples/: actor_actions.rs  choices.rs  full.rs  talk_only.rs
assets/: actor_actions.json  choices.json  choices.screenplay.json  cutscene.dialogue.ron  full.json  full.screenplay.json  shop.dialogue.ron  simple.json  simple.screenplay.json  simple.screenplay.ron  test.dialogue.ron
assets/talks/: choices.screenplay.ron  choices.talk.ron  full.screenplay.ron  full.talk.ron  interact_a.screenplay.ron  interact_a.talk.ron  interact_b.talk.ron  simple.talk.ron
builder/: index.html
concepts/: database.html  format.html  validation.html
docs/: book.toml  open.sh  verify_summary.sh
docs/src/: SUMMARY.md  editor.md  getting-started.md  index.md  roadmap.md
docs/src/builder/: index.md
docs/src/concepts/: database.md  format.md  validation.md
docs/src/getting-started/: index.md
docs/src/runtime/: actors.md  cues.md  pacing.md  persistence.md  playing.md  rhai-reference.md  scripting.md  variables.md
examples/: actor_actions.rs  choices.rs  custom_node_event.rs  cutscene.rs  full.rs  ingame.rs  shop.rs  simple.rs  talk_only.rs  terminal.rs
getting-started/: index.html
macros/: Cargo.toml
macros/src/: lib.rs
runtime/: actors.html  cues.html  pacing.html  persistence.html  playing.html  rhai-reference.html  scripting.html  variables.html
src/: action.rs  actors.rs  builder.rs  builderv2.rs  components.rs  conversation.rs  dialogue_line.rs  errors.rs  events.rs  lib.rs  loader.rs  local.rs  old_builder.rs  persist.rs  prelude.rs  raw_screenplay.rs  raw_screenplay_json.rs  raw_talk.rs  repo.rs  saver.rs  screenplay.rs  screenplay_builder.rs  script.rs  scripting.rs  talk.rs  talk_asset.rs  talker.rs  talkv2.rs  traverse.rs  trigger.rs  types.rs
src/builder/: build_command.rs  builder.rs  command.rs  commands.rs  errors.rs  loader.rs  mod.rs  types.rs
src/builderr/: builder.rs
src/data/: actor.rs  conversation.rs  database.rs  entry.rs  field.rs  ids.rs  link.rs  mod.rs  variable.rs
src/display/: mod.rs  terminal.rs
src/events/: mod.rs  node_events.rs  requests.rs
src/loader/: error.rs  loader.rs  mod.rs  types.rs  validate.rs
src/ron_loader/: loader.rs  mod.rs  types.rs
src/runtime/: mod.rs  runner.rs  sequencer.rs  step.rs  variables.rs  visits.rs
src/scripting/: cues.rs  functions.rs  mod.rs
src/talks/: builder.rs  components.rs  errors.rs  mod.rs  raw_talk.rs  talk.rs
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
tools/editor/: Cargo.toml
tools/editor/src/: graph.rs  main.rs  panels.rs  state.rs  value_editor.rs  widgets.rs
