[package]
name = "bevy_talks"
version = "0.5.0"
edition = "2021"
authors = ["Giuseppe De Palma"]
description = "A Bevy plugin to write dialogues for your characters to say and do things, together with player choices."
repository = "https://github.com/giusdp/bevy_talks"
homepage = "https://github.com/giusdp/bevy_talks"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "plugin", "dialogues", "dialogs"]
categories = ["games", "game-development"]
exclude = [
    "examples/**/*",
    "docs/**/*",
    "assets/**/*",
    "tools/**/*",
    ".github/**/*",
]

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci", "macros"]

[lints]
[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
missing_docs_in_private_items = "deny"
doc_markdown = "warn"
type_complexity = "allow"
too_many_arguments = "allow"

[dependencies]
thiserror = "1.0"
serde = { version = "1" }
serde_ron = { version = "0.8", package = "ron" }
indexmap = "2.1.0"

# Bevy Dependencies
bevy = { version = "0.12", default-features = false, features = ["bevy_asset"] }
bevy-trait-query = "0.4.0"
aery = "0.5.2"

bevy_talks_macros = { path = "macros", version = "0.1" }

[dev-dependencies]
bevy = { version = "0.12" }
rstest = "0.18.2"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "choices"
path = "examples/choices.rs"

[[example]]
name = "full"
path = "examples/full.rs"

[[example]]
name = "ingame"
path = "examples/ingame.rs"

[[example]]
name = "custom_node_event"
path = "examples/custom_node_event.rs"

[lib]
name = "bevy_talks"
path = "src/lib.rs"
