[package]
name = "bevy_talks"
version = "0.6.0"
edition = "2024"
authors = ["Giuseppe De Palma"]
description = "A Bevy plugin to write dialogues for your characters to say and do things. The Dialogue System for Bevy."
repository = "https://github.com/giusdp/bevy_talks"
homepage = "https://github.com/giusdp/bevy_talks"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "plugin", "dialogues", "dialogs"]
categories = ["games", "game-development"]
exclude = [
    "examples/**/*",
    "docs/**/*",
    "assets/**/*",
    "tools/**/*",
    ".github/**/*",
]

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci", "tools/editor"]

[lints]
[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
missing_docs_in_private_items = "deny"
doc_markdown = "warn"
type_complexity = "allow"
too_many_arguments = "allow"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
ron = "0.12"
# sync: Engine and ASTs live in Bevy resources, which must be Send + Sync.
rhai = { version = "1", features = ["sync"] }
scoped-tls-hkt = "0.1"

# Bevy Dependencies
bevy = { version = "0.19", default-features = false, features = [
    "bevy_asset",
    "bevy_log",
] }

[dev-dependencies]
bevy = { version = "0.19" }
rstest = "0.26"

[lib]
name = "bevy_talks"
path = "src/lib.rs"
